--- a/affiliate.html
+++ b/affiliate.html
@@ -231,7 +231,7 @@
 				};
 				document.write(
 					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
 						"ipt>",
 				);
 			</script>
@@ -245,7 +245,7 @@
 				};
 				document.write(
 					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
 						"ipt>",
 				);
 			</script>
@@ -259,7 +259,7 @@
 				};
 				document.write(
 					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
 						"ipt>",
 				);
 			</script>
@@ -273,7 +273,7 @@
 				};
 				document.write(
 					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
 						"ipt>",
 				);
 			</script>
@@ -287,7 +287,7 @@
 				};
 				document.write(
 					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
 						"ipt>",
 				);
 			</script>
@@ -301,7 +301,7 @@
 				};
 				document.write(
 					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
 						"ipt>",
 				);
 			</script>
@@ -315,7 +315,7 @@
 				};
 				document.write(
 					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
 						"ipt>",
 				);
 			</script>
@@ -329,7 +329,7 @@
 				};
 				document.write(
 					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
 						"ipt>",
 				);
 			</script>
@@ -343,7 +343,7 @@
 				};
 				document.write(
 					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
 						"ipt>",
 				);
 			</script>
@@ -357,7 +357,7 @@
 				};
 				document.write(
 					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
 						"ipt>",
 				);
 			</script>
@@ -371,7 +371,7 @@
 				};
 				document.write(
 					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
 						"ipt>",
 				);
 			</script>
@@ -385,7 +385,7 @@
 				};
 				document.write(
 					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
 						"ipt>",
 				);
 			</script>
@@ -399,7 +399,7 @@
 				};
 				document.write(
 					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
 						"ipt>",
 				);
 			</script>
@@ -413,7 +413,7 @@
 				};
 				document.write(
 					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
 						"ipt>",
 				);
 			</script>
@@ -427,7 +427,7 @@
 				};
 				document.write(
 					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
 						"ipt>",
 				);
 			</script>
@@ -441,7 +441,7 @@
 				};
 				document.write(
 					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
 						"ipt>",
 				);
 			</script>
@@ -455,7 +455,7 @@
 				};
 				document.write(
 					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
 						"ipt>",
 				);
 			</script>
@@ -469,7 +469,7 @@
 				};
 				document.write(
 					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
 						"ipt>",
 				);
 			</script>
@@ -483,7 +483,7 @@
 				};
 				document.write(
 					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
 						"ipt>",
 				);
 			</script>
@@ -497,7 +497,7 @@
 				};
 				document.write(
 					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
 						"ipt>",
 				);
 			</script>
@@ -511,7 +511,7 @@
 				};
 				document.write(
 					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
 						"ipt>",
 				);
 			</script>
@@ -525,7 +525,7 @@
 				};
 				document.write(
 					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
 						"ipt>",
 				);
 			</script>
@@ -539,7 +539,7 @@
 				};
 				document.write(
 					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
 						"ipt>",
 				);
 			</script>
@@ -553,7 +553,7 @@
 				};
 				document.write(
 					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
 						"ipt>",
 				);
 			</script>
@@ -567,7 +567,7 @@
 				};
 				document.write(
 					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
 						"ipt>",
 				);
 			</script>
@@ -581,7 +581,7 @@
 				};
 				document.write(
 					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
 						"ipt>",
 				);
 			</script>
