--- a/affiliate.html
+++ b/affiliate.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    		<meta http-equiv="refresh" content="2;url=https://tmtechnomania.github.io/">
+    		<meta http-equiv="refresh" content="5;url=https://tmtechnomania.github.io/">
 		<title>Thanks for using Extension by GetProjects</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -222,369 +222,235 @@
 				enabling ads on this page or consider giving donations to keep this extension running!! Note: I don't suggest clicking on any ads!!
 			</h2>
 			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
+	atOptions = {
+		'key' : 'e8105a7670134344bc98b1ea9766961c',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+</script>
 			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
+	atOptions = {
+		'key' : 'e8105a7670134344bc98b1ea9766961c',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+</script>
 			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
+	atOptions = {
+		'key' : 'e8105a7670134344bc98b1ea9766961c',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+</script>
 			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
+	atOptions = {
+		'key' : 'e8105a7670134344bc98b1ea9766961c',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+</script>
 			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
+	atOptions = {
+		'key' : 'e8105a7670134344bc98b1ea9766961c',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+</script>
 			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
+	atOptions = {
+		'key' : 'e8105a7670134344bc98b1ea9766961c',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+</script>
 			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
+	atOptions = {
+		'key' : 'e8105a7670134344bc98b1ea9766961c',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+</script>
 			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
+	atOptions = {
+		'key' : 'e8105a7670134344bc98b1ea9766961c',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+</script>
 			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
+	atOptions = {
+		'key' : 'e8105a7670134344bc98b1ea9766961c',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+</script>
 			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
+	atOptions = {
+		'key' : 'e8105a7670134344bc98b1ea9766961c',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+</script>
 			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
+	atOptions = {
+		'key' : 'e8105a7670134344bc98b1ea9766961c',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+</script>
 			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
+	atOptions = {
+		'key' : 'e8105a7670134344bc98b1ea9766961c',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+</script>
 			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
+	atOptions = {
+		'key' : 'e8105a7670134344bc98b1ea9766961c',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+</script>
 			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
+	atOptions = {
+		'key' : 'e8105a7670134344bc98b1ea9766961c',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+</script>
 			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
+	atOptions = {
+		'key' : 'e8105a7670134344bc98b1ea9766961c',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+</script>
 			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
+	atOptions = {
+		'key' : 'e8105a7670134344bc98b1ea9766961c',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+</script>
 			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
+	atOptions = {
+		'key' : 'e8105a7670134344bc98b1ea9766961c',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+</script>
 			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
+	atOptions = {
+		'key' : 'e8105a7670134344bc98b1ea9766961c',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+</script>
 			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
+	atOptions = {
+		'key' : 'e8105a7670134344bc98b1ea9766961c',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+</script>
 			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
+	atOptions = {
+		'key' : 'e8105a7670134344bc98b1ea9766961c',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+</script>
 			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
+	atOptions = {
+		'key' : 'e8105a7670134344bc98b1ea9766961c',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+</script>
 			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
+	atOptions = {
+		'key' : 'e8105a7670134344bc98b1ea9766961c',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+</script>
 			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
+	atOptions = {
+		'key' : 'e8105a7670134344bc98b1ea9766961c',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+</script>
 		</div>
 		<div id="donation">
 			<h1>Happy with the extension!</h1>
