--- a/affiliate.html
+++ b/affiliate.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    		<meta http-equiv="refresh" content="5;url=https://tmtechnomania.github.io/">
+<!--     		<meta http-equiv="refresh" content="5;url=https://tmtechnomania.github.io/"> -->
 		<title>Thanks for using Extension by GetProjects</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
