--- a/affiliate.html
+++ b/affiliate.html
@@ -223,234 +223,54 @@
 			</h2>
 			<script type="text/javascript">
 	atOptions = {
-		'key' : 'e8105a7670134344bc98b1ea9766961c',
+		'key' : '8d34e02856a57a815e4b434f92118211',
 		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
+		'height' : 250,
+		'width' : 300,
 		'params' : {}
 	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
 </script>
+<script type="text/javascript" src="//www.topcreativeformat.com/8d34e02856a57a815e4b434f92118211/invoke.js"></script>
 			<script type="text/javascript">
 	atOptions = {
-		'key' : 'e8105a7670134344bc98b1ea9766961c',
+		'key' : '8d34e02856a57a815e4b434f92118211',
 		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
+		'height' : 250,
+		'width' : 300,
 		'params' : {}
 	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
 </script>
+<script type="text/javascript" src="//www.topcreativeformat.com/8d34e02856a57a815e4b434f92118211/invoke.js"></script>
 			<script type="text/javascript">
 	atOptions = {
-		'key' : 'e8105a7670134344bc98b1ea9766961c',
+		'key' : '8d34e02856a57a815e4b434f92118211',
 		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
+		'height' : 250,
+		'width' : 300,
 		'params' : {}
 	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
 </script>
+<script type="text/javascript" src="//www.topcreativeformat.com/8d34e02856a57a815e4b434f92118211/invoke.js"></script>
 			<script type="text/javascript">
 	atOptions = {
-		'key' : 'e8105a7670134344bc98b1ea9766961c',
+		'key' : '8d34e02856a57a815e4b434f92118211',
 		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
+		'height' : 250,
+		'width' : 300,
 		'params' : {}
 	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
 </script>
+<script type="text/javascript" src="//www.topcreativeformat.com/8d34e02856a57a815e4b434f92118211/invoke.js"></script>
 			<script type="text/javascript">
 	atOptions = {
-		'key' : 'e8105a7670134344bc98b1ea9766961c',
+		'key' : '8d34e02856a57a815e4b434f92118211',
 		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
+		'height' : 250,
+		'width' : 300,
 		'params' : {}
 	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
 </script>
-			<script type="text/javascript">
-	atOptions = {
-		'key' : 'e8105a7670134344bc98b1ea9766961c',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-</script>
-			<script type="text/javascript">
-	atOptions = {
-		'key' : 'e8105a7670134344bc98b1ea9766961c',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-</script>
-			<script type="text/javascript">
-	atOptions = {
-		'key' : 'e8105a7670134344bc98b1ea9766961c',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-</script>
-			<script type="text/javascript">
-	atOptions = {
-		'key' : 'e8105a7670134344bc98b1ea9766961c',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-</script>
-			<script type="text/javascript">
-	atOptions = {
-		'key' : 'e8105a7670134344bc98b1ea9766961c',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-</script>
-			<script type="text/javascript">
-	atOptions = {
-		'key' : 'e8105a7670134344bc98b1ea9766961c',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-</script>
-			<script type="text/javascript">
-	atOptions = {
-		'key' : 'e8105a7670134344bc98b1ea9766961c',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-</script>
-			<script type="text/javascript">
-	atOptions = {
-		'key' : 'e8105a7670134344bc98b1ea9766961c',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-</script>
-			<script type="text/javascript">
-	atOptions = {
-		'key' : 'e8105a7670134344bc98b1ea9766961c',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-</script>
-			<script type="text/javascript">
-	atOptions = {
-		'key' : 'e8105a7670134344bc98b1ea9766961c',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-</script>
-			<script type="text/javascript">
-	atOptions = {
-		'key' : 'e8105a7670134344bc98b1ea9766961c',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-</script>
-			<script type="text/javascript">
-	atOptions = {
-		'key' : 'e8105a7670134344bc98b1ea9766961c',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-</script>
-			<script type="text/javascript">
-	atOptions = {
-		'key' : 'e8105a7670134344bc98b1ea9766961c',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-</script>
-			<script type="text/javascript">
-	atOptions = {
-		'key' : 'e8105a7670134344bc98b1ea9766961c',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-</script>
-			<script type="text/javascript">
-	atOptions = {
-		'key' : 'e8105a7670134344bc98b1ea9766961c',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-</script>
-			<script type="text/javascript">
-	atOptions = {
-		'key' : 'e8105a7670134344bc98b1ea9766961c',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-</script>
-			<script type="text/javascript">
-	atOptions = {
-		'key' : 'e8105a7670134344bc98b1ea9766961c',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-</script>
-			<script type="text/javascript">
-	atOptions = {
-		'key' : 'e8105a7670134344bc98b1ea9766961c',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//boundarygoose.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-</script>
+<script type="text/javascript" src="//www.topcreativeformat.com/8d34e02856a57a815e4b434f92118211/invoke.js"></script>
 		</div>
 		<div id="donation">
 			<h1>Happy with the extension!</h1>
