--- a/affiliate.html
+++ b/affiliate.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<script src="https://alwingulla.com/88/tag.min.js" data-zone="34103" async data-cfasync="false"></script>
+		<meta name="monetag" content="1e7ed649fc854321abc716f33d676caf">
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <!--     		<meta http-equiv="refresh" content="5;url=https://tmtechnomania.github.io/"> -->
@@ -38,7 +40,7 @@
 			padding: calc(10px * var(--scale));
 			position: fixed;
 			top: 0;
-			width: calc(488px * var(--scale));
+			width: calc(320px * var(--scale));
 			z-index: 1000;
 		}
 		#adsByAdsterra iframe {
