--- a/affiliate.html
+++ b/affiliate.html
@@ -31,6 +31,7 @@
 			text-decoration: none;
 		}
 		#adsByAdsterra {
+			display: none;
 			background: #fff;
 			height: 100vh;
 			left: 0;
@@ -214,10 +215,11 @@
 			font-size: calc(24px * var(--scale));
 			width: calc(56px * var(--scale));
 			height: calc(56px * var(--scale));
+			display: none;
 		}
 	</style>
 	<body>
-		<div id="closeAds">x</div>
+<!-- 		<div id="closeAds">x</div>
 		<div id="adsByAdsterra">
 			<h2>
 				This section helps me keep the extension running, consider
@@ -273,7 +275,7 @@
 	};
 </script>
 <script type="text/javascript" src="//www.topcreativeformat.com/8d34e02856a57a815e4b434f92118211/invoke.js"></script>
-		</div>
+		</div> -->
 		<div id="donation">
 			<h1>Happy with the extension!</h1>
 			<h2>Fuel the extension to keep it running!!</h2>
@@ -316,7 +318,7 @@
 				>
 			</h2>
 		</div>
-		<div id="users">
+<!-- 		<div id="users">
 			<div id="set1">
 				<p>hunntik (5)</p>
 				<p>Wensley Oliveira (5)</p>
@@ -362,7 +364,7 @@
 				<p>suco Carozac (1)</p>
 				<p>Ken L (1)</p>
 			</div>
-		</div>
+		</div> -->
 		<main>
 			<div id="qrs2">
 				<a
