--- a/affiliate.html
+++ b/affiliate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<script src="https://alwingulla.com/88/tag.min.js" data-zone="34103" async data-cfasync="false"></script>
+<!-- 		<script src="https://alwingulla.com/88/tag.min.js" data-zone="34103" async data-cfasync="false"></script> -->
 		<meta name="monetag" content="1e7ed649fc854321abc716f33d676caf">
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
