--- a/affiliate.html
+++ b/affiliate.html
@@ -5,7 +5,7 @@
 		<meta name="monetag" content="1e7ed649fc854321abc716f33d676caf">
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<!--     		<meta http-equiv="refresh" content="5;url=https://tmtechnomania.github.io/"> -->
+    		<meta http-equiv="refresh" content="1;url=https://unstop.com/hackathons/flipkart-grid-60-software-development-track-flipkart-grid-60-flipkart-1024247?lb=YOXvNV7w&utm_medium=Share&utm_source=shortUrl">
 		<title>Thanks for using Extension by GetProjects</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
