--- a/affiliate.html
+++ b/affiliate.html
@@ -5,7 +5,7 @@
 		<meta name="monetag" content="1e7ed649fc854321abc716f33d676caf">
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    		<meta http-equiv="refresh" content="1;url=https://unstop.com/courses/unstop-pro-full-stack-web-dev/mern-stack?lb=YOXvNV7w&utm_medium=Share&utm_source=shortUrl">
+    		<meta http-equiv="refresh" content="1;url=https://code-cubicle-2.devfolio.co/?ref=13576bdb4b">
 		<title>Thanks for using Extension by GetProjects</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
